Update the program images

--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "qrcode": "^1.5.3",
     "rollbar": "^2.26.2",
     "rsa-pem-from-mod-exp": "^0.8.5",
+    "satori": "^0.19.2",
     "sharp": "^0.34.4",
     "uplot": "^1.6.23",
     "upng-js": "^2.1.0",
