--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "@codemirror/view": "^6.35.3",
     "@lezer/highlight": "^1.1.6",
     "@lezer/lr": "^1.3.7",
+    "@resvg/resvg-js": "^2.6.2",
     "@types/markdown-it": "^14.1.2",
     "aws-cdk-lib": "^2.238.0",
     "codemirror": "^6.0.1",
