--- a/lambda/package.json
+++ b/lambda/package.json
@@ -15,7 +15,7 @@
     "@codemirror/state": "^6.5.0",
     "@codemirror/view": "^6.35.3",
     "@lezer/lr": "^1.3.4",
-    "@resvg/resvg-js": "^2.6.2",
+    "@resvg/resvg-wasm": "^2.6.2",
     "@types/markdown-it": "^14.1.2",
     "aws-sdk": "^2.1603.0",
     "cookie": "^0.4.1",
