--- a/lambda/package.json
+++ b/lambda/package.json
@@ -6,6 +6,14 @@
   "author": "Anton Astashov",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.996.0",
+    "@aws-sdk/client-dynamodb": "^3.996.0",
+    "@aws-sdk/client-lambda": "^3.996.0",
+    "@aws-sdk/client-s3": "^3.996.0",
+    "@aws-sdk/client-secrets-manager": "^3.996.0",
+    "@aws-sdk/client-ses": "^3.996.0",
+    "@aws-sdk/lib-dynamodb": "^3.996.0",
+    "@aws-sdk/s3-request-presigner": "^3.996.0",
     "@codemirror/autocomplete": "^6.18.3",
     "@codemirror/commands": "^6.7.1",
     "@codemirror/lang-markdown": "^6.3.1",
@@ -17,7 +25,6 @@
     "@lezer/lr": "^1.3.4",
     "@resvg/resvg-wasm": "^2.6.2",
     "@types/markdown-it": "^14.1.2",
-    "aws-sdk": "^2.1603.0",
     "cookie": "^0.4.1",
     "deepmerge": "^4.3.1",
     "dequal": "^2.0.3",
@@ -42,6 +49,7 @@
     "satori": "^0.19.2",
     "sharp": "^0.34.5",
     "source-map-support": "^0.5.19",
+    "ts-node": "^10.9.2",
     "turndown": "^7.2.0",
     "uplot": "^1.6.23",
     "yatro": "^0.2.7",
