--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
     "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.26.0",
     "autoprefixer": "^10.4.20",
-    "aws-sdk": "^2.1395.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
     "chai": "^4.3.10",
@@ -106,7 +105,6 @@
     "style-loader": "^1.1.3",
     "tailwindcss": "^3.4.17",
     "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
     "ts-node-dev": "^1.1.6",
     "turndown": "^7.2.0",
     "typescript": "^5.7.3",
@@ -115,6 +113,14 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.996.0",
+    "@aws-sdk/client-dynamodb": "^3.996.0",
+    "@aws-sdk/client-lambda": "^3.996.0",
+    "@aws-sdk/client-s3": "^3.996.0",
+    "@aws-sdk/client-secrets-manager": "^3.996.0",
+    "@aws-sdk/client-ses": "^3.996.0",
+    "@aws-sdk/lib-dynamodb": "^3.996.0",
+    "@aws-sdk/s3-request-presigner": "^3.996.0",
     "@codemirror/autocomplete": "^6.18.3",
     "@codemirror/commands": "^6.7.1",
     "@codemirror/lang-markdown": "^6.3.1",
@@ -155,6 +161,7 @@
     "rsa-pem-from-mod-exp": "^0.8.5",
     "satori": "^0.19.2",
     "sharp": "^0.34.5",
+    "ts-node": "^10.9.2",
     "uplot": "^1.6.23",
     "upng-js": "^2.1.0",
     "yatro": "^0.2.7",
