--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   ],
   "scripts": {
     "build": "npm run ensure:localdomain && npm run build:prepare && npm run upload-source-maps",
-    "build:prepare": "npm run ensure:localdomain && npm run build:markdown && npm run build:programs && npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production npm run build:dev",
-    "build:stage": "npm run ensure:localdomain && npm run build:markdown && npm run build:programs && npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production STAGE=1 npm run build:dev",
+    "build:prepare": "npm run ensure:localdomain && npm run build:markdown && npm run build:programs && npm run build:exercises && npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production npm run build:dev",
+    "build:stage": "npm run ensure:localdomain && npm run build:markdown && npm run build:programs && npm run build:exercises && npm run plannerhighlighter && npm run blog && npm run docs && npm run sitemap && NODE_ENV=production STAGE=1 npm run build:dev",
     "ensure:localdomain": "test -f localdomain.js || cp localdomain.default.js localdomain.js",
     "build:markdown": "node scripts/build-markdown.js",
     "build:programs": "TS_NODE_TRANSPILE_ONLY=1 ts-node scripts/build-programs.ts",
+    "build:exercises": "TS_NODE_TRANSPILE_ONLY=1 ts-node scripts/build-exercises.ts",
     "build:semantic": "node generate-semantic-colors.js",
     "analyze": "open dist/report.html",
     "docs": "generate-md --layout ./src/docs/layout/ --input ./src/docs/content/ --output ./docs",
@@ -23,7 +24,7 @@
     "check": "tsc --noEmit",
     "grammar:planner": "lezer-generator --output ./src/pages/planner/plannerExerciseParser.ts ./src/pages/planner/plannerExercise.grammar",
     "lint": "eslint . --fix",
-    "start": "npm run build:markdown && npm run build:programs && webpack-dev-server",
+    "start": "npm run build:markdown && npm run build:programs && npm run build:exercises && webpack-dev-server",
     "start:server": "npm run build:markdown && IS_DEV=true IS_LOCAL=true IMGPREFIX=lambda/ ts-node-dev --inspect --files --poll -T devserver.ts",
     "start:server:prod": "IS_DEV=false IS_LOCAL=false IMGPREFIX=lambda/ ts-node-dev --inspect --files --poll -T devserver.ts",
     "trust": "sudo security add-trusted-cert -d -r trustRoot -k /Library/Keychains/System.keychain cert/private.crt",
@@ -33,7 +34,7 @@
     "synctoprod": "curl -v -X POST http://local-api.liftosaur.com:3000/api/synctoprod?ids=$IDS\\&key=$KEY",
     "synctodev": "curl -v -X POST http://local-api.liftosaur.com:3000/api/synctodev?ids=$IDS\\&key=$KEY",
     "copy:lambda": "mkdir -p ./dist-lambda && cp ./lambda/package*.json ./dist-lambda && cp -r ./lambda/images ./dist-lambda",
-    "build:lambda": "npm run build:markdown && npm run build:programs && npm run copy:lambda && tsc -p tsconfig.lambda.json",
+    "build:lambda": "npm run build:markdown && npm run build:programs && npm run build:exercises && npm run copy:lambda && tsc -p tsconfig.lambda.json",
     "watch:lambda": "npm run copy:lambda && tsc -p tsconfig.lambda.json --watch",
     "build-and-start:lambda": "npm run build:lambda && npm run start:lambda",
     "start:lambda": "cdk-synth && sam-start-api",
